[package]
name = "jklm-wordbomb-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_socketio = "0.3.1"
serde_json = "1.0.79"
lazy_static = "1.4.0"
clap = { version = "3.1.9", features = ["derive"] }
[build-dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"